Sloppy Al Gore v2.0
- fixes
- improvements
- more upgrades

--- a/gore/index.html
+++ b/gore/index.html
@@ -83,10 +83,29 @@
         </div>
         <div id="cosmicGoreContainer" style="display:none">
           <button id="cosmicGoreButton">
-            Cosmic Gore - Cube Rebirth production of Al Gores (5e210 Green Revolutions)
+            Cosmic Gore - Cube Rebirth production of Al Gores (5.55e55 Green Revolutions)
           </button>
         </div>
-        
+        <div id="finalActionContainer" style="display:none; margin-top:8px;">
+          <button id="finalActionButton">
+            Increase Temporal Awakening cap to Climate Change per Revolution to 3e30% (3.33e333 AI Slop)
+          </button>
+        </div>
+        <div id="finalAction2Container" style="display:none; margin-top:8px;">
+          <button id="finalAction2Button">
+            Final Push - Climate &amp; Rebirth cost no longer scales (1.11e111 Temporal Awakenings)
+          </button>
+        </div>
+        <div id="finalAction3Container" style="display:none; margin-top:8px;">
+          <button id="finalAction3Button">
+            Omnipresent - Purchase All on every tick (1e50 Al Gores)
+          </button>
+        </div>
+        <div id="finalAction4Container" style="display:none; margin-top:8px;">
+          <button id="finalAction4Button">
+            Thank you for playing – x5e55 Temporal Awakenings produced per second (666Sx Cosmic Rebirths)
+          </button>
+        </div>
           
       </div>
 
