--- a/gore/index.html
+++ b/gore/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Sloppy Al Gore</h1>
+    <h1>Sloppy Al Gore v2.0</h1>
     <p>A game about AI Slop, powered by AI Slop, and somehow involving Al Gore.</p>
   </header>
   <main>
