--- a/ccg/index.html
+++ b/ccg/index.html
@@ -66,8 +66,12 @@
   </div>
 
   <div id="tab-content-merchant" class="tab-content" style="display:none;">
-    <h2>Traveling Merchant</h2>
-    <div id="merchant-offers"></div>
+    <div id="merchant-panel">
+      <img   id="merchant-image"   class="merchant-image"   alt="Merchant" />
+      <div  id="merchant-message" class="merchant-message"></div>
+      <div  id="merchant-offers"  class="merchant-offers"></div>
+      <div  id="merchant-timer"   class="merchant-timer"></div>
+    </div>
   </div>
 
   <div id="tab-content-stats" class="tab-content" style="display:none;">
@@ -85,6 +89,7 @@
   <script src="js/resources.js"></script>
   <script src="js/effects.js"></script>
   <script src="js/statistics.js"></script>
+  <script src="js/merchant_helpers.js"></script>
   <script src="js/merchant.js"></script>
 
   <!-- Main Behavior -->
