--- a/ccg/index.html
+++ b/ccg/index.html
@@ -77,6 +77,27 @@
   <div id="tab-content-stats" class="tab-content" style="display:none;">
   </div>
 
+  <!-- Modal Structure -->
+  <div class="modal-overlay" id="card-modal" style="display: none;">
+    <div class="modal-content">
+      <!-- Left Column -->
+      <div class="modal-left">
+        <div class="modal-frame">
+          <img class="modal-frame-img" src="" alt="Card Frame">
+          <img class="modal-image" src="" alt="Card Image">
+          <img class="modal-tier-icon" src="" alt="Tier Icon">
+          <div class="modal-name"></div>
+          <div class="modal-desc"></div>
+        </div>
+      </div>
+      
+      <!-- Right Column -->
+      <div class="modal-right">
+        <!-- Content will be added dynamically -->
+      </div>
+    </div>
+  </div>
+
   <!-- Libs -->
   <script src="https://cdn.jsdelivr.net/npm/decimal.js@10.3.1/decimal.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
