--- a/ccg/index.html
+++ b/ccg/index.html
@@ -168,6 +168,7 @@
 
   <!-- Core Data -->
   <script src="js/cards.js"></script>
+  <script src="js/skills_helpers.js"></script>
   <script src="js/skills.js"></script>
 
   <!-- Split-out Logic -->
