--- a/ccg/index.html
+++ b/ccg/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/statistics.css" />
   <link rel="stylesheet" href="css/harvester.css" />
   <link rel="stylesheet" href="css/absorber.css" />
+  <link rel="stylesheet" href="css/interceptor.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/settings.css" />
@@ -84,6 +85,10 @@
         <div id="absorber-container" class="absorber-container" style="display: none;">
           <img id="absorber-button" class="absorber-button" src="assets/images/absorber.png" alt="Absorber" onclick="handleAbsorberClick()" />
           <div class="absorber-counter">0.00</div>
+        </div>
+        <div id="interceptor-container" class="interceptor-container" style="display: none;">
+          <img id="interceptor-button" class="interceptor-button" src="assets/images/interceptor.png" alt="Interceptor" onclick="handleInterceptorClick()" />
+          <div class="interceptor-counter">0.00</div>
         </div>
       </div>
     
@@ -213,6 +218,7 @@
   <script src="js/settings.js"></script>
   <script src="js/harvester.js"></script>
   <script src="js/absorber.js"></script>
+  <script src="js/interceptor.js"></script>
 
   <!-- Main Behavior -->
   <script src="js/main.js"></script>
