--- a/ccg/index.html
+++ b/ccg/index.html
@@ -33,7 +33,7 @@
   <!-- Welcome Modal -->
   <div id="welcome-modal" class="welcome-modal" style="display: none;">
     <div class="welcome-content">
-      <h2>Welcome to (yet to be named) Incremental Collectible Card Game!</h2>
+      <h2>Welcome to Cosmic Collection - an Incremental Collectible Card Game!</h2>
       <div class="welcome-tips">
         <div class="tip-item">
           <div class="tip-text">Poke the black hole and see what it spits out</div>
@@ -51,6 +51,7 @@
           <div class="tip-text">I'm sure you can figure the rest out. Enjoy!</div>
         </div>
       </div>
+      <h2>Can you collect them all?</h2>
       <button class="welcome-close-btn">Got it!</button>
     </div>
   </div>
