--- a/ccg/index.html
+++ b/ccg/index.html
@@ -124,11 +124,11 @@
   
   
 
-  <div id="tab-content-cards" class="tab-content" style="display:none;">
-    <h2>Cards Collection</h2>
-    <div id="cards-filters">
-    </div>
-    <div id="cards-list" class="draw-area cards-draw-area"></div>
+  <div id="tab-content-cards" class="tab-content">
+    <h2>Card Collection</h2>
+    <div id="effect-filters" class="effect-filters"></div>
+    <div id="cards-filters"></div>
+    <div id="cards-list" class="draw-area"></div>
   </div>
 
   <div id="tab-content-skills" class="tab-content" style="display:none;">
