added game banners

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     <link rel="stylesheet" href="achievements.css">
 </head>
 <body>
+    <div class="domain-change-banner">
+        ⚠️ This game is moving to <a href="https://www.kuzzigames.com" target="_blank">www.kuzzigames.com</a>. This version is no longer being updated and this domain will be disabled on Aug 9, 2025. Please transfer your save to the new domain!
+    </div>
     <div id="messageModal" class="modal">
         <div class="modal-content">
             <span class="close-button" id="closeMessageModal">&times;</span>
