--- a/adventure/index.html
+++ b/adventure/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="domain-change-banner">
+    ⚠️ This game is moving to <a href="https://www.kuzzigames.com" target="_blank">www.kuzzigames.com</a>. This version is no longer being updated and this domain will be disabled on Aug 9, 2025. Please transfer your save to the new domain!
+  </div>
   <div class="container">
     <!-- Top status section with settings image, bars, and upgrades -->
     <div id="topStatus">
