--- a/ccg/index.html
+++ b/ccg/index.html
@@ -22,6 +22,10 @@
   <link rel="stylesheet" href="css/battles.css" />
 </head>
 <body>
+  <div class="domain-change-banner">
+    ⚠️ This game is moving to <a href="https://www.kuzzigames.com" target="_blank">www.kuzzigames.com</a>. This version is no longer being updated and this domain will be disabled on Aug 9, 2025. Please transfer your save to the new domain!
+  </div>
+  
   <!-- Landscape Mode Overlay -->
   <div id="landscape-overlay" style="display: none;">
     <div class="landscape-content">
